# mingzhu-core

./: .env.example  .gitignore  ACCOUNTANT.md  AGENT_INTRO.txt  AGENT_SYSTEM_PROMPT.md  ASTRAEOS.md  ASTRO.md  ASTRO_BAZI.md  BUSINESS.md  CHANGELOG.md  CHANGELOG_SOUL.md  CODING_GUIDELINES.md  CONTRIBUTING.md  DEPLOY.md  DIAGNOSIS.md  DUI_ZE.md  ECONOMIST.md  ENGINEER.md  FINANCE.md  GEN_SHOU.md  HEPHAESTUS.md  HERMES.md  KAN_GUAN.md  KUN_ZAI.md  LI_MING.md  LOGOS.md  NORTHSTAR.md  PHILOSOPHER.md  PROFILE.md  PROJECT_LOG.md  PROJECT_MANAGER.md  PROMETHEUS.md  QIAN_DUAN.md  README.md  RELEASE.md  RESEARCHER.md  SEARCH_PROTOCOL.md  SOCIOLOGIST.md  SOUL.md  THINKER.md  (+12 more)
.deepeval/: .deepeval_telemetry.txt
.github/: dependabot.yml
agent_system/: __init__.py  api.py  astro_service.py  cognitive_cycle.py  cognitive_state.py  collaboration.py  config_loader.py  cost_monitor.py  enterprise_workflow.py  error_handling.py  evaluator.py  evaluator_evolution.py  evolution.py  execution_strategy.py  jia_jue.py  jia_mu.py  json_mode.py  langgraph_engine.py  llm_backends.py  memory.py  meta_cognition.py  scheduler.py  self_evolution.py  studio_entry.py  subproject.py  test_agent.py  tool_adapter.py  tools.py  vector_search.py  wu_cang.py  wu_tu.py
config/: organization.yaml  red_lines.yaml  soul_config.yaml  ziwei_config.yaml
daily/: 2026-06-15.md  2026-06-16.md  2026-06-18.md  2026-06-19.md  2026-06-22.md  2026-06-23.md  2026-06-27.md  README.md
evolution/: experiences.json  preferences.json
master_profile/: bazi_config.yaml
memory_store/: api-test.json  c5.json  debug3.json  (+31 more)
(+39 files in other folders)
